tests/ui/nll/promoted-bounds.stderr
error[E0597]: `l` does not live long enough
  --> $DIR/promoted-bounds.rs:19:17
   |
LL |     let ptr = {
   |         --- borrow later stored here
LL |         let l = 3;
   |             - binding `l` declared here
LL |         let b = &l;
   |                 ^^ borrowed value does not live long enough
...
LL |     };
   |     - `l` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
